Increase modal dialog's z-index to 2 so the dialog would appear correctly

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -51,6 +51,7 @@ div.container {
         background-color: rgba(0, 0, 0);
         opacity: 1;
         visibility: visible;
+        z-index: 2;
         transform: scale(1.1);
         transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
     }
@@ -58,6 +59,7 @@ div.container {
         position: absolute;
         top: 50%;
         left: 50%;
+        z-index: 2;
         transform: translate(-50%, -50%);
         color: whitesmoke;
         background-color: rgb(0, 139, 139);
@@ -97,6 +99,7 @@ div.container {
         background-color: rgba(0, 0, 0);
         opacity: 1;
         visibility: visible;
+        z-index: 2;
         transform: scale(1.1);
         transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
     }
@@ -108,6 +111,7 @@ div.container {
         color: whitesmoke;
         background-color: rgb(0, 139, 139);
         padding: 1rem 1.5rem;
+        z-index: 2;
         width: 24rem;
     }
     .wishTable th {
@@ -458,6 +462,7 @@ button[type=submit]:hover{
     background-color: rgba(0, 0, 0, 0.5);
     opacity: 1;
     visibility: visible;
+    z-index: 2;
     transform: scale(1.1);
     transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
 }
@@ -465,6 +470,7 @@ button[type=submit]:hover{
     position: absolute;
     top: 50%;
     left: 50%;
+    z-index: 2;
     transform: translate(-50%, -50%);
     color: whitesmoke;
     background-color: rgb(0, 139, 139, 0.9);
